--- a/src/views/styles/style.css
+++ b/src/views/styles/style.css
@@ -14,4 +14,12 @@ ul.note-lists {
 
 button.onright{
     float: right;
+    margin-top: 10px;
+}
+
+.text-area-show{
+    background-color: #f9f6f2;
+    border: 1px solid #c3c3c3;
+    display:  flex;
+    flex-wrap: wrap;
 }
